unpackaged/main/default/objects/Contact/fields/Decision_Making_Role__c.field-meta.xml
<CustomField>
    <fullName>Decision_Making_Role__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will represent if the associated contact is in a decision making position.</description>
    <label>Decision-Making Role</label>
    <type>Checkbox</type>
</CustomField>