unpackaged/main/default/objects/Contact/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manager?</label>
    <type>Checkbox</type>
</CustomField>